css/browser.css
#bg {
    position: fixed;
    /* Preserve aspect ratio */
    min-width: 100%;
    min-height: 100%;
    top: -8.25%;
    left: -8.25%;
}
#overlay {
    position: fixed;
    width: 100%;
    height: 100%;
    opacity: 0.6;
    background-color: #252525;
    border: 3px solid #1a3d5a;
    border-right: 0;
}
#serverlist {
    position: absolute;
    top: 35px;
    bottom: 0;
    left: 8px;
    right: 0px;
    width: 84%;
}
#serverinfo {
    position: absolute;
    top: 15px;
    bottom: 0;
    right: 15px;
    width: 26%;
}
.gameCard{
    opacity: 0.8;
    padding: 15;
    padding-bottom: 30;
    color: white;
    background-color: black;
    border-style: solid;
    border: 3px solid #1a3d5a;
}
.gameCard img{
    padding-right: -5;
    padding-bottom: 10;
}
.gameCard ul{
    list-style-type: none;
    padding-left:0;
    font-size: 1.17em;
    margin: 0;
}
.gamecard h3{
    margin:0;
}
.serverTable{
    opacity: 0.8;
    padding: 5;
    color: white;
    background: black;
}
.browserTitle{
    color: white;
    opacity: 0.8;
    position: absolute;
    top: 1;
    left: 90;
}
#logo{
    position: absolute;
    top: 10;
    left: 15;
    opacity: 0.8;
    width: 58px;
    height: 50px;
}
.refresh {
    opacity: 0.8;
    position: absolute;
    top: 23;
    left: 462;
    color: white;
    font-weight: bold;
    background-color: black;
    width: 125px;
    height: 30px;
    border-style: solid;
    border: 1px solid white;
}
.refresh:hover{
    background-color: #1a3d5a;
}
.serverStats {
    color: white;
	font-weight: bold;
    opacity: 0.8;
    position: absolute;
    top: 19;
    left: 610;
}
.statBreakdown{
    margin-top: 10;
    background: black;
    color:white;
}
.statLines{
    border-style: solid;
    border-bottom: 0;
    border-top: 1px solid white;
    border-left: 0;
    border-right: 0;
}
#connectionStatus{
	opacity: 0.8;
	position:fixed; bottom:0; right: 0;
	z-index:1000;
	padding-right: 8;
	padding-bottom: 5;
    color: white;
}
#setBrowser{
	opacity: 0.8;
	position:fixed; bottom:17; right: 0;
	z-index:1000;
	padding-right: 8;
	padding-bottom: 4;
    display: none;
}
#setBrowser:a{
    font-weight: normal;
}
body{
    background-color: black;
    cursor: url('../images/cursor.png'), default;
}
a {
    color: white !important;
}
.table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
    background-color: #1a3d5a;
}
.tableHeader{
    background-color: #1a3d5a;
}
.heading {
    color: grey; 
}
.version {
    float: right;
}
img{
    -webkit-user-drag: none;
}
::-webkit-scrollbar {
    width: 20px;
    height: 10px;
}
::-webkit-scrollbar-button:start:decrement,
::-webkit-scrollbar-button:end:increment  {
    display: none;
}
::-webkit-scrollbar-track-piece  {
    background-color: rgba(0,0,0,0);
    border: 3px solid #1a3d5a;
    border-left: 0;
} 
::-webkit-scrollbar-thumb:vertical {
    background: grey url(../images/scrollbar_thumb_bg.png) no-repeat center;
}
html {
    overflow-y:scroll;
}

